messing with match creation with database profiles

--- a/BlazorApp/Components/Pages/Test.razor
+++ b/BlazorApp/Components/Pages/Test.razor
@@ -28,7 +28,7 @@
     <ul>
         @foreach (var ev in events)
         {
-            <li>Event ID: @ev.event_id, Host Profile ID: @ev.host_profile_id, Event Date: @(ev.event_date.HasValue ? ev.event_date.Value.ToShortDateString() : "N/A")</li>
+            //<li>Event ID: @ev.event_id, Host Profile ID: @ev.host_profile_id, Event Date: @(ev.event_date.HasValue ? ev.event_date.Value.ToShortDateString() : "N/A")</li>
         }
     </ul>
 }
