--- a/BlazorApp/Components/Pages/Roster.razor
+++ b/BlazorApp/Components/Pages/Roster.razor
@@ -174,6 +174,7 @@
 
                 // Optionally, perform additional actions after successful insertion
                 Console.WriteLine($"New wrestler inserted with ID: {wrestlerID}");
+                StateHasChanged();
             }
             else
             {
