--- a/BlazorApp/Components/Pages/SignUp.razor.css
+++ b/BlazorApp/Components/Pages/SignUp.razor.css
@@ -1,11 +1,71 @@
-/* Apply bold font weight to labels */
+.signup-box {
+    width: 400px;
+    display: grid;
+    border-radius: 5px;
+    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 70%);
+    color: white;
+    margin: auto; 
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.signup-box h1 {
+    color: white;
+    text-align: center;
+    padding-left: 50px;
+    margin-top: 10px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.signup-box .form-group {
+    display: grid;
+    padding: 0 2rem;
+    margin-bottom: 1rem;
+}
+
+.signup-box .input-box {
+    padding: 0.5rem;
+    font-size: 1rem;
+    color: #f3f4f6;
+    background-color: transparent;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #f3f4f6;
+}
+
+.signup-box .submit-button {
+    width: 100%;
+    margin-top: 1rem;
+    padding: 1rem;
+    font-size: 1.1rem;
+    font-weight: 600;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    background-color: #D6553E;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.signup-box .submit-button:hover {
+    background-color: #de7765;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+
+/* Apply bold font weight to labels 
 .label {
     font-weight: bold;
 }
 
 /* Set width for input fields */
-.input-SignUp {
-    width: 250px; /* Adjust width as needed */
+/* .input-SignUp {
+    width: 250px; 
     border: solid;
     border-radius: 50px;
     border-color: rgb(183, 183, 183);
@@ -14,23 +74,23 @@
 .submit-SignUp{
     justify-self: center;
     vertical-align: auto;
-}
-
+}*/
 
 /* Style the submit button */
+/*
 .btn {
-    background-color: #007bff; /* Blue color */
-    color: white; /* Text color */
-    padding: 8px 16px; /* Padding */
-    border: none; /* No border */
-    border-radius: 4px; /* Rounded corners */
-    cursor: pointer; /* Cursor on hover */
+    background-color: #007bff; 
+    color: white; 
+    padding: 8px 16px; 
+    border: none; 
+    border-radius: 4px; 
+    cursor: pointer; 
     justify-self: center;
 }
 
-    /* Hover effect for the submit button */
+    /* Hover effect for the submit button 
     .btn:hover {
-        background-color: #0056b3; /* Darker blue color */
+        background-color: #0056b3; /* Darker blue color 
     }
 
 .input-table{
@@ -40,14 +100,11 @@
     place-items: center;
     vertical-align: auto;
     
-    
 }
 
 .input-table td{
     padding: 10px;
 }
-
-
 
 .center-title{
     display: grid;
@@ -55,12 +112,9 @@
     
 }
 
-
-
-
 body .input-table{
     display: grid;
     place-items: center;
     vertical-align: auto;
     
-}
+}/*
