added nav menu to dashboard to use as home page

--- a/BlazorApp/Components/Pages/Dashboard.razor
+++ b/BlazorApp/Components/Pages/Dashboard.razor
@@ -1,5 +1,5 @@
 @page "/dashboard"
-@layout BlazorApp.Components.Layout.HeaderLayout
+@layout BlazorApp.Components.Layout.MainLayout
 
 <div class="dashboard">
     
