--- a/BlazorApp/Components/Pages/Dashboard.razor.css
+++ b/BlazorApp/Components/Pages/Dashboard.razor.css
@@ -37,7 +37,7 @@
 }
 
 .blue-background {
-    background-image: linear-gradient(180deg, #0E88AE 0%, #022733 70%);
+    background-color: #022733;
 }
 
 .box {
@@ -64,11 +64,11 @@
 }
 
 .calendar-box {
-    margin-top: 20px; /* Adjust spacing between grid and calendar */
-    border: 1px solid #ddd; /* Example border */
-    padding: 20px; /* Example padding */
-    border-radius: 5px; /* Example border radius */
-    background-color: #f9f9f9; /* Example background color */
+    margin-top: 20px;
+    border: 1px solid #ddd; 
+    padding: 20px; 
+    border-radius: 5px; 
+    background-color: #f9f9f9; 
 }
 
 .eventmenu-toggler {
@@ -119,7 +119,7 @@
 }
 
 .bi-chat-icon {
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" viewBox="0 0 16 16"><path d="M8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6-.097 1.016-.417 2.13-.771 2.966-.079.186.074.394.273.362 2.256-.37 3.597-.938 4.18-1.234A9 9 0 0 0 8 15"/></svg>');
 }
 
 .nav-item {
