--- a/BlazorApp/Components/Pages/EventViewer.razor
+++ b/BlazorApp/Components/Pages/EventViewer.razor
@@ -318,6 +318,7 @@
 
         
         localEventID = selectedEvent.EventID;
+        await jsRuntime.InvokeVoidAsync("setCookie", "eventId", localEventID);
         try
         {
             List<int> guestProfileIDs = await GetGuestProfileIDsForEvent(selectedEvent.EventID);
